--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,7 @@
-# Copyright 2021 Caner Derici
-# See LICENSE file for licensing details.
-#
-# TEMPLATE-TODO: change this example to suit your needs.
-# If you don't need a config, you can remove the file entirely.
-# It ties in to the example _on_config_changed handler in src/charm.py
-#
-# Learn more about config at: https://juju.is/docs/sdk/config
+
 
 options:
-  thing:
-    default: 🎁
-    description: A thing used by the charm.
+  redirect-map:
+    default: https://jnsgr.uk/demo-routes
+    description: URL pointing to a list of redirects on Gosherve
     type: string
